# Flowloop

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/inference/: __init__.py  emotion_service.py
backend/src/ml/: pretrained_emotion_service.py
backend/src/smoothing/: __init__.py  ema.py
backend/src/tasks/: task_engine.py
backend/src/websocket/: handler.py  messages.py
docs/: HANDOFF.md  PRD.md  PROGRESS.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/WebcamCapture/: index.tsx  useWebcam.ts
frontend/src/lib/features/: faceCropExtractor.ts  landmarkFeatures.ts
frontend/src/lib/mediapipe/: FaceMeshProcessor.ts
frontend/src/lib/supabase/: auth.tsx  client.ts  index.ts  sessions.ts  types.ts  useSessionPersistence.ts
frontend/src/lib/websocket/: WebSocketClient.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  SessionPage.tsx  SettingsPage.tsx  SignupPage.tsx
frontend/src/types/: index.ts
ml/: README.md  inference_server.py  pyproject.toml  requirements.txt
ml/data/: __init__.py  download_fer2013.py  prepare_fer2013.py
ml/export/: export_onnx.py
ml/models/: __init__.py  emotion_net.onnx  emotion_net.py  fusion_net.py
ml/training/: config.yaml  train_emotion.py
shared/: package.json
shared/types/: messages.ts
supabase/migrations/: 001_initial_schema.sql
